--- a/Final Documentation/Introduction/Introduction.tex
+++ b/Final Documentation/Introduction/Introduction.tex
@@ -90,8 +90,10 @@ This example is a simplified kitchen planner. Figure~\ref{fig:Running_Example_GU
 \end{figure}
 
 \textit{Kitchen} contains items e.g., sink, fridge, table etc. You can create, delete or move these items in the kitchen space, and press "Sync" to propagate your changes to the layout. The \textit{Layout} consist of groups with certain number of blocks. This shows how much space the objects occupy as coloured groups of blocks organised in a grid. Here, the \textit{Kitchen} corresponds to the \textit{Layout} and a \textit{Item} corresponds to a \textit{Group}. This is described by Figure~\ref{fig:Running_Example_GUI} where an item e.g., \textit{sink} created in the \textit{Kitchen} corresponds to a group in the \textit{Layout}.
-\newline\newline Both artifacts are created and evolved together during the lifecycle of the application representing a kitchen workspace throughout. Thus, changes in one domain should be propagated to the other domain in order to ensure consistency between these related artifacts. This phenomenon is showed by Figure~\ref{fig:Running_Example_GUI_consistency}.
-\newline\newline Model transformation and synchronization is discussed with this scenario throughout this thesis. 
+
+Both artifacts are created and evolved together during the lifecycle of the application representing a kitchen workspace throughout. Thus, changes in one domain should be propagated to the other domain in order to ensure consistency between these related artifacts. This phenomenon is showed by Figure~\ref{fig:Running_Example_GUI_consistency}.
+
+Model transformation and synchronization is discussed with this scenario throughout this thesis. 
 
 \subsection{BX Basics}\label{subsec:definitions}
 
