--- a/Final Documentation/Final-Documentation.tex
+++ b/Final Documentation/Final-Documentation.tex
@@ -197,12 +197,16 @@
   	\input{Requirements/Requirements}
  
   	\input{RelatedWork/RelatedWork}
-
+    \clearpage
+    
   	\input{Design/Design}
+  	\clearpage
 
   	\input{Implementation/Implementation}
+  	\clearpage
  
   	\input{Evaluation/Evaluation}
+  	\clearpage
  
   	\input{Summary/Summary}
     \clearpage
